fix layout bug on contact page

--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -66,6 +66,7 @@
         @include tablet{
             flex-direction: row;
             align-items: initial;
+            min-height: 250px;
         }
     }
 
